Close #437: loading CRL at startup generates an error
Extend B64_BLOB from "VARCHAR(8000)" which was a good
common value - until I realized that CRL may become pretty large.

Use "TEXT" for all databases but MariaDB, where LONGTEXT is used.

Add database type check via SQL query to detect the
correct database even behind an ODBC Driver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ file(READ VERSION.txt ver)
 string(REGEX MATCH "([0-9\.]*)" _ ${ver})
 set(PROJECT_VERSION ${CMAKE_MATCH_1})
 
+cmake_host_system_information(RESULT OS_DATA_LIST QUERY
+	OS_NAME OS_RELEASE OS_VERSION OS_PLATFORM)
+list(JOIN OS_DATA_LIST " -- " OS_DATA)
+message(STATUS ${OS_DATA})
+
 include(GNUInstallDirs)
 
 ##### Git command to tweak the version and commit hash
