Fix github compile error by using the QT provided compilers
doc/CMakeLists.txt: Create output directory during configure
phase to avoid a race-condition.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -79,6 +79,7 @@ if(SPHINX)
 		${RST_SOURCE}
 	COMMENT "Prepare Sphinx source directory"
   )
+  file(TOUCH ${D}/rst/arguments.rst)
   add_custom_command(
 	OUTPUT ${D}/rst/arguments.rst
 	COMMAND xcadoc rst ${D}/rst/arguments.rst
