--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,11 @@ include(cmake/git_version.cmake)
 ##### Build specifications
 
 set(ADDRESS_SANITIZER OFF CACHE BOOL "Enable Address sanitizing")
+set(APPSTORE_COMPLIANT OFF CACHE BOOL "Create an Appstore compliant, sanboxed app")
+if (APPSTORE_COMPLIANT)
+  set(APPSTORE -appstore-compliant)
+endif()
+
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -159,16 +164,17 @@ if(APPLE)
   find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS ${_qt_bin_dir})
   add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${MACDEPLOYQT_EXECUTABLE} $<TARGET_FILE_DIR:${PROJECT_NAME}>/../..
-        -always-overwrite
+        -always-overwrite ${APPSTORE}
     COMMENT "Running macdeployqt..."
   )
   if (DEFINED ENV{APPLE_DEVELOPER_HASH})
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
       COMMAND codesign --deep --signature-size=96000 --options=runtime --timestamp
-		--entitlements ${PROJECT_SOURCE_DIR}/misc/entitlement.plist
-                --force -s "$ENV{APPLE_DEVELOPER_HASH}"
+		--entitlements ${PROJECT_SOURCE_DIR}/misc/entitlement${APPSTORE}.plist
+		--force -s "$ENV{APPLE_DEVELOPER_HASH}"
 		$<TARGET_FILE_DIR:${PROJECT_NAME}>/../..
-      COMMENT "Running codesign for $ENV{APPLE_DEVELOPER} ..."
+		COMMENT "Running codesign for $ENV{APPLE_DEVELOPER_HASH} ..."
+      DEPENDS ${PROJECT_SOURCE_DIR}/misc/entitlement${APPSTORE}.plist
     )
   endif()
 
